{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 189,
  "lineage": "c0cbbe5d-d0d5-aae2-9fa8-acf9363e01dc",
  "resources": [
    {
      "module": "module.infrastructure[\"test1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01c835443b86fe988",
            "arn": "arn:aws:ec2:eu-west-2:562770310107:instance/i-0611ad67d8581b19e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0611ad67d8581b19e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e6d64c0efcf07003",
            "private_dns": "ip-10-0-0-12.eu-west-2.compute.internal",
            "private_ip": "10.0.0.12",
            "public_ip": "18.132.9.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ab58064f03919c6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed6803553772e318",
            "tags": {
              "Name": "test1-api"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042c039f4db1dadb3"
            ]
          },
          "dependencies": [
            "module.infrastructure.aws_instance.db",
            "module.infrastructure.aws_security_group.allow-ssh",
            "module.infrastructure.aws_subnet.public-subnet",
            "module.infrastructure.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure[\"test1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01c835443b86fe988",
            "arn": "arn:aws:ec2:eu-west-2:562770310107:instance/i-0ee55e07a6baa8772",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee55e07a6baa8772",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071b6387d57d4766b",
            "private_dns": "ip-10-0-0-11.eu-west-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_ip": "3.8.139.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-099b6173149636cf3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed6803553772e318",
            "tags": {
              "Name": "test1-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042c039f4db1dadb3"
            ]
          },
          "dependencies": [
            "module.infrastructure.aws_security_group.allow-ssh",
            "module.infrastructure.aws_subnet.public-subnet",
            "module.infrastructure.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure[\"test1\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:562770310107:internet-gateway/igw-012246bc84b5b78fb",
            "id": "igw-012246bc84b5b78fb",
            "owner_id": "562770310107",
            "tags": {
              "Name": "internet-gw"
            },
            "vpc_id": "vpc-02509e8f66372a900"
          },
          "dependencies": [
            "module.infrastructure.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure[\"test1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07958a3e4db137ed7",
            "owner_id": "562770310107",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012246bc84b5b78fb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-02509e8f66372a900"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.aws_internet_gateway.internet-gw",
            "module.infrastructure.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure[\"test1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012b11f13396f3280",
            "route_table_id": "rtb-07958a3e4db137ed7",
            "subnet_id": "subnet-0ed6803553772e318"
          },
          "dependencies": [
            "module.infrastructure.aws_internet_gateway.internet-gw",
            "module.infrastructure.aws_route_table.public-rt",
            "module.infrastructure.aws_subnet.public-subnet",
            "module.infrastructure.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure[\"test1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:562770310107:security-group/sg-042c039f4db1dadb3",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042c039f4db1dadb3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "562770310107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-02509e8f66372a900"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure[\"test1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:562770310107:subnet/subnet-0f7743374db4d8a80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.16/28",
            "id": "subnet-0f7743374db4d8a80",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562770310107",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-02509e8f66372a900"
          },
          "dependencies": [
            "module.infrastructure.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure[\"test1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:562770310107:subnet/subnet-0ed6803553772e318",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/28",
            "id": "subnet-0ed6803553772e318",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "562770310107",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-02509e8f66372a900"
          },
          "dependencies": [
            "module.infrastructure.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure[\"test1\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:562770310107:vpc/vpc-02509e8f66372a900",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/27",
            "default_network_acl_id": "acl-0fc9a76a7ea71c4d2",
            "default_route_table_id": "rtb-0c46c60f23ff50f41",
            "default_security_group_id": "sg-0f8b71236d62f7b2a",
            "dhcp_options_id": "dopt-0790ae6f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02509e8f66372a900",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c46c60f23ff50f41",
            "owner_id": "562770310107"
          }
        }
      ]
    }
  ]
}